# GeometricAlgebra

./: .gitignore  CMakeLists.txt  README.md
include/GeometricAlgebra/: Maths.h  Multivector.h  Vector.h
src/: Multivector.cpp  Vector.cpp
